--- a/www/nginx/index.html
+++ b/www/nginx/index.html
@@ -18,13 +18,12 @@
     </style>
 </head>
 <body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the custom nginx web server deployment is successfully installed and
-working. No further configuration is required.</p>
-
-<p>For online documentation and installation help please refer to the GitHub repository
-<a href="https://github.com/TristanServices/nginx">TristanServices/nginx</a>.<br/>
-
-<p><em>Thank you for using the custom nginx deployment by Tristan Services.</em></p>
+    <h1>Welcome to nginx!</h1>
+    <p>If you see this page, the custom nginx web server deployment is successfully installed and working. No further configuration is required.</p>
+    <p>For online documentation and installation help please refer to the GitHub repository <a href="https://git.tristan.services/TristanServices/nginx">TristanServices/nginx</a> (<a href="https://github.com/TristanServices/nginx">GitHub</a>/<a href="https://github.com/TristanServices/nginx">GitLab</a>).
+    <br/>
+    <p>
+        <em>Thank you for using the custom nginx deployment by Tristan Services.</em>
+    </p>
 </body>
 </html>
