--- a/www/default/network.html
+++ b/www/default/network.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>404 Not Found - Internal Network</title>
+    <title>Internal Network</title>
     <style>
         body {
             margin: 0 auto;
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div>
-    <h1>404 Not Found</h1>
+    <h1>Internal Network</h1>
     <h2>You're currently viewing the default page of the internal network.</h2>
 </div>
 <hr><div>Internal Network</div>
