--- a/www/default/error.html
+++ b/www/default/error.html
@@ -17,6 +17,7 @@
             padding: 0 auto;
             color: #777;
             text-decoration: none;
+            font-size: 80%;
         }
     </style>
 </head>
