Update default page

--- a/www/nginx/index.html
+++ b/www/nginx/index.html
@@ -20,10 +20,10 @@
 <body>
     <h1>Welcome to nginx!</h1>
     <p>If you see this page, the custom nginx web server deployment is successfully installed and working. No further configuration is required.</p>
-    <p>For online documentation and installation help please refer to the GitHub repository <a href="https://git.tristan.services/TristanServices/nginx">TristanServices/nginx</a> (<a href="https://github.com/TristanServices/nginx">GitHub</a>/<a href="https://github.com/TristanServices/nginx">GitLab</a>).
+    <p>For online documentation and installation help please refer to the GitHub repository <a href="https://git.tristan.services/TristanServices/Infra/deployments/nginx">nginx</a> (<a href="https://github.com/TristanServices/nginx">GitHub</a>/<a href="https://gitlab.com/TristanServices/nginx">GitLab</a>).
     <br/>
     <p>
-        <em>Thank you for using the custom nginx deployment by Tristan Services.</em>
+        <em>Thank you for using the custom nginx deployment.</em>
     </p>
 </body>
 </html>
